--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -264,5 +264,6 @@
     <string name="update">Aggiorna</string>
     <string name="choose_icon">Scegli un\' icona</string>
     <string name="custom_icon">Icona personalizzata</string>
+    <string name="installationForbidden">L\' installazione non è possibile su questo dispositivo. Per installare Xposed attraverso questa app, il dispositivo deve avere Android Lollipop o superiore.</string>
 
 </resources>
