updated it translator

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -169,7 +169,7 @@
     <string name="about_developers"><a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> e <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a>\n <a href="http://forum.xda-developers.com/member.php?u=4756862">-BioHaZard-</a> e <a href="http://forum.xda-developers.com/member.php?u=5345056">dvdandroid</a> per bug fix e Material Design</string>
     <string name="about_developers_warning"><b>Non</b> contattare direttamente gli sviluppatori per supporto, usa i link in basso.</string>
     <string name="about_translator_label">Tradotto da:</string>
-    <string name="translator">Vincenzo Cerminara</string>
+    <string name="translator">Vincenzo Cerminara e dvdandroid</string>
     <string name="about_version_label">Versione applicazione:</string>
     <string name="about_source_label">Codice sorgente:</string>
     <string name="about_support_label">Ottieni supporto:</string>
