--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -265,5 +265,7 @@
     <string name="choose_icon">Scegli un\' icona</string>
     <string name="custom_icon">Icona personalizzata</string>
     <string name="installationForbidden">L\' installazione non è possibile su questo dispositivo. Per installare Xposed attraverso questa app, il dispositivo deve avere Android Lollipop o superiore.</string>
+    <string name="installed_no_lollipop">Xposed framework  è installed.</string>
+    <string name="not_installed_no_lollipop">Xposed framework is not installed.</string>
 
 </resources>
