--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -165,15 +165,15 @@
     <string name="log_is_empty">Il Log è vuoto</string>
 
     <!-- About tab -->
-    <string name="about_developers_label">Sviluppatori principali:</string>
+    <string name="about_developers_label">Sviluppatori principali</string>
     <string name="about_developers"><a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> e <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a>\n <a href="http://forum.xda-developers.com/member.php?u=4756862">-BioHaZard-</a> e <a href="http://forum.xda-developers.com/member.php?u=5345056">dvdandroid</a> per bug fix e Material Design</string>
     <string name="about_developers_warning"><b>Non</b> contattare direttamente gli sviluppatori per supporto, usa i link in basso.</string>
-    <string name="about_translator_label">Tradotto da:</string>
+    <string name="about_translator_label">Tradotto da</string>
     <string name="translator">Vincenzo Cerminara e dvdandroid</string>
-    <string name="about_version_label">Versione applicazione:</string>
-    <string name="about_source_label">Codice sorgente:</string>
+    <string name="about_version_label">Versione</string>
+    <string name="about_source_label">Codice sorgente</string>
     <string name="about_support_label">Ottieni supporto:</string>
-    <string name="about_libraries_label">Librerie utilizzate:</string>
+    <string name="about_libraries_label">Librerie utilizzate</string>
 
     <!-- DownloadView -->
     <string name="download_view_download">Download</string>
