--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -286,5 +286,6 @@
     <string name="md_storage_perm_error">Vaša aplikácia nemá povolenie pre READ_EXTERNAL_STORAGE.</string>
     <string name="md_custom_label">Vlastné</string>
     <string name="md_presets_label">Predvoľby</string>
+    <string name="changelog">Zoznam zmien</string>
 
 </resources>
