scroll to top button in logsfragment

--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -277,5 +277,6 @@
     <string name="md_presets_label">Predefiniti</string>
     <string name="changelog">Modifiche</string>
     <string name="md_storage_perm_error">La tua app non ha i permessi di scrittura nella memoria interna</string>
+    <string name="scroll_top">Scorri su</string>
 
 </resources>
